# GigaamAsrCXX

./: .dockerignore  .gitignore  AUTHORS.md  CMakeLists.txt  Dockerfile.cmake322  README.md  main.cpp
scripts/: download_public_test_wavs.sh  prepare_russian_librispeech_subset.py  repro-cmake322.sh
src/app/: Ports.hpp  Services.cpp  Services.hpp
src/cli/: main.cpp
src/domain/: Assets.cpp  Assets.hpp  Audio.hpp  Dataset.cpp  Dataset.hpp  Manifest.cpp  Manifest.hpp  Text.cpp  Text.hpp
src/infra/asr/: RnntRecognizer.cpp  RnntRecognizer.hpp
src/infra/audio/: MiniaudioDecoder.cpp  MiniaudioDecoder.hpp
src/infra/datasets/: RussianLibrispeechIndex.cpp  RussianLibrispeechIndex.hpp
src/infra/download/: HttplibHttpClient.cpp  HttplibHttpClient.hpp
tests/: DomainTests.cpp
